# Aeon-Manager

./: .gitignore  LICENSE  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: Account.jsx  App.css  App.jsx  Calendar.jsx  GameSelection.jsx  Home.jsx  News.jsx  Onboarding.jsx  Settings.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  i18n.rs  lib.rs  main.rs  secure_store.rs
src-tauri/src/commands/: account.rs  checkin.rs  codes.rs  cookies.rs  discord.rs  mod.rs  network.rs  settings.rs  streaks.rs
src/Account/: AccountView.jsx  BackupCodeField.jsx  ConfirmWindow.jsx  CreateAccount.jsx  InputField.jsx
src/Components/: Dropdown.jsx  Notification.jsx  SectionLabel.jsx  Sidebar.jsx  SidebarButton.jsx  TitleBar.jsx  ToggleSwitch.jsx
src/GameSelection/: GameBanner.jsx  GameToggleSwitch.jsx
src/Home/: CodesSection.jsx  EmptyState.jsx  GameCard.jsx  GameDashboard.jsx
src/Settings/: AppSettings.jsx  ConfirmWindow.jsx  Cookies.jsx  CookiesConfiguration.jsx  GameSettings.jsx  SettingsRow.jsx
src/data/: GameAssets.js  Games.js  Regions.js
src/i18n/: index.js
src/i18n/locales/: en.json
src/utils/: updates.jsx
