[package]
name = "aeon-manager"
version = "0.1.0"
description = "Desktop manager for HoYoLAB check-ins and redemption codes"
authors = ["kayleeforu"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aeon_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rookie = "0.5.6"
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
indexmap = { version = "2", features = ["serde"] }
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.13.4", features = ["json"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
keyring = "3"
tauri-plugin-updater = "2"
